@@ -10,6 +10,7 @@ po-electric-pole-consumption-append=__1__\n[font=default-semibold][color=255, 23
 po-transformer=Separates electric networks from each other
 
 [mod-setting-name]
+power-overload-disconnect-different-poles=Automatically disconnect poles of different types [img=info]
 power-overload-on-pole-overload=When power pole is overloaded
 power-overload-log-to-chat=Power pole explosion alerts in chat
 power-overload-transformer-efficiency=Transformer efficiency
@@ -19,6 +20,8 @@ power-overload-max-power=Max consumption: __ENTITY____1____
 power-overload-on-pole-overload-destroy=Destroy
 power-overload-on-pole-overload-damage=Damage
 
+[mod-setting-description]
+power-overload-disconnect-different-poles=Prevents accidentally connecting different networks that have different maximum consumptions
 
 [overload-alert]
 alert=[entity=__1__] destroyed (Consumption = __2__MW)
